Bug 477228 - System Tray icon not using `yakuake-symbolic` name, causing it to be inappropriately colorful
Summary: System Tray icon not using `yakuake-symbolic` name, causing it to be inapprop...
Status: RESOLVED FIXED
Alias: None
Product: yakuake
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.01.75
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Eike Hein
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-11-19 12:39 UTC by semlraug
Modified: 2024-04-21 10:16 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 24.02
Sentry Crash Report:


Attachments
screenshot showing the icon/systray (181.57 KB, image/png)
2023-11-19 12:39 UTC, semlraug
Details

Note You need to log in before you can comment on or make changes to this bug.
Description semlraug 2023-11-19 12:39:15 UTC
Created attachment 163288 [details]
screenshot showing the icon/systray

SUMMARY
***
Testing Qt6/Plasma 6 on EndeavourOS
The yakuake icon in the systray is displayed in colour in stead of black/white
Please see attachtment.
***


STEPS TO REPRODUCE
1. install yakuake
2. make sure the icon shows up in the systray
3. the icon is in colour although all the other icons in systray are not

OBSERVED RESULT
the icon is in colour although all the other icons in systray are not

EXPECTED RESULT
the icon should be black/white

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
Operating System: EndeavourOS 
KDE Plasma Version: 5.27.80
KDE Frameworks Version: 5.245.0
Qt Version: 6.6.0
Kernel Version: 6.6.1-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 8 × Intel® Core™ i5-8250U CPU @ 1.60GHz
Memory: 3.7 GiB of RAM
Graphics Processor: Mesa Intel® UHD Graphics 620
Manufacturer: Acer
Product Name: Aspire A315-53
System Version: V2.02

KDE Plasma Version: 5.27.80
KDE Frameworks Version: 5.245.0
Qt Version: 6.6.0

ADDITIONAL INFORMATION
Graphics:
  Device-1: Intel UHD Graphics 620 driver: i915 v: kernel
  Device-2: Quanta VGA WebCam driver: uvcvideo type: USB
  Display: wayland server: X.org v: 1.21.1.9 with: Xwayland v: 23.2.2
    compositor: kwin_wayland driver: X: loaded: modesetting dri: iris gpu: i915
    resolution: 1920x1080
  API: EGL v: 1.5 drivers: iris,swrast
    platforms: wayland,x11,surfaceless,device
  API: OpenGL v: 4.6 compat-v: 4.5 vendor: intel mesa v: 23.2.1-arch1.2
    renderer: Mesa Intel UHD Graphics 620 (KBL GT2)
  API: Vulkan Message: No Vulkan data available.
Audio:
  Device-1: Intel Sunrise Point-LP HD Audio driver: snd_hda_intel
  API: ALSA v: k6.6.1-arch1-1 status: kernel-api
  Server-1: PipeWire v: 0.3.85 status: active
Comment 1 Nate Graham 2023-11-26 16:39:23 UTC
The `yakuake-symbolic` icon exists in the Breeze icon theme, so all that's needed is for Yakuake to use it. I can confirm that this isn't working right now.
Comment 2 Bug Janitor Service 2023-11-26 16:45:57 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/yakuake/-/merge_requests/117
Comment 3 Nate Graham 2023-11-29 20:55:59 UTC
Git commit a7f4bb6123d62c35633f18cb724581f06c25412c by Nate Graham.
Committed on 26/11/2023 at 17:43.
Pushed by ngraham into branch 'master'.

Use symbolic icon for system tray

We have it; let's use it! If `yakuake-symbolic` doesn't exist in the
icon theme, it will safely fall back to the base icon.
Related: bug 473278
FIXED-IN: 24.02

M  +1    -1    app/mainwindow.cpp

https://invent.kde.org/utilities/yakuake/-/commit/a7f4bb6123d62c35633f18cb724581f06c25412c
Comment 4 Tuomas Nurmi 2024-04-21 10:16:47 UTC
Git commit e9bc393ef17fd0a5332fd359f1b746ca9adda003 by Tuomas Nurmi.
Committed on 21/04/2024 at 10:12.
Pushed by nurmi into branch 'master'.

Change systray icon to use symbolic version

Not having "-symbolic" in name prevents showing of symbolic icon on KF6 Plasma systray.
Looking at various bugreports and code changes done in Yakuake and other applications,
this is apparently ok way to fix this, as it should fall back to icon without symbolic
suffix if none is found.
Related: bug 485748

M  +2    -0    ChangeLog
M  +1    -1    src/TrayIcon.cpp

https://invent.kde.org/multimedia/amarok/-/commit/e9bc393ef17fd0a5332fd359f1b746ca9adda003