Use symbolic icon for system tray

We have it; let's use it! If `yakuake-symbolic` doesn't exist in the
icon theme, it will safely fall back to the base icon.

BUG: 477228
CCBUG: 473278
FIXED-IN: 24.02